update for qq game

--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -40,7 +40,7 @@
       <div class="lower">
         <a class="retry-button">再来一次！</a>
 
-        <a id="share-button">炫耀一下！</a>
+        <a id="share-button" onclick="qq_share();">炫耀一下！</a>
       </div>
     </div>
 
@@ -118,34 +118,40 @@
           });
       });
 
-      $("#shre-button").click(function(){
 
-          var score = $("#share-button").attr("data-score");
-
-          fusion2.dialog.sendStory
-          ({
-              title :"玩会儿，挑战2048，根本停不下来",
-
-              img:"http://i.gtimg.cn/open/app_icon/01/25/50/82//1101255082_100.png",
-
-              summary :"2014年度最新、最火爆的休闲小游戏，根本听不下来，全球几亿人都在玩。",
-
-              msg:"我的分数："+score+" 分，你敢来挑战吗？",
-
-              button :"向好友们炫耀一下！",
-
-              source :"ref=story&act=default",
-
-              context:"send-story-12345",
-
-              onSuccess : function ()
-              {
-                  alert("分享成功！");
-              }
-          });
-      });
 
   })
+
+
+  var qq_share = function(){
+
+      var score;
+      score = document.getElementById("share-button").getAttributeNode("data-score").nodeValue;
+
+      console.log(score);
+
+      fusion2.dialog.sendStory
+      ({
+          title :"玩会儿，挑战2048，根本停不下来",
+
+          img:"http://i.gtimg.cn/open/app_icon/01/25/50/82//1101255082_100.png",
+
+          summary :"2014年度最新、最火爆的休闲小游戏，根本听不下来，全球几亿人都在玩。",
+
+          msg:"我的分数："+score+" 分，你敢来挑战吗？",
+
+          button :"向好友们炫耀一下！",
+
+          source :"ref=story&act=default",
+
+          context:"send-story-12345",
+
+          onSuccess : function ()
+          {
+              alert("分享成功！");
+          }
+      });
+  };
 
 </script>
 </body>
