--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -118,10 +118,7 @@
           });
       });
 
-
-
   })
-
 
   var qq_share = function(){
 
@@ -136,7 +133,7 @@
 
           img:"http://i.gtimg.cn/open/app_icon/01/25/50/82//1101255082_100.png",
 
-          summary :"2014年度最新、最火爆的休闲小游戏，根本听不下来，全球几亿人都在玩。",
+          summary :"2014年度最新、最火爆的休闲小游戏，根本停不下来，全球几亿人都在玩。",
 
           msg:"我的分数："+score+" 分，你敢来挑战吗？",
 
@@ -144,15 +141,24 @@
 
           source :"ref=story&act=default",
 
-          context:"send-story-12345",
-
-          onSuccess : function ()
-          {
-              alert("分享成功！");
-          }
+          context:"send-story-12345"
       });
   };
 
+</script>
+<script type="text/javascript">
+    $(function(){
+        console.log("----");
+        $(".left-sidebar ul li").click(function(){
+            $.ajax({
+                type: "get",
+                url: "/qq?material_id=62",
+                success: function(data){
+                    $(".game-container").html(data);
+                }
+            })
+        });
+    })
 </script>
 </body>
 </html>
