update for qq ajax

--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -81,6 +81,10 @@
   </p>
   <hr style="margin-bottom: 0">
 
+  <div>
+    <%= link_to "hello", "javascript:void(0)", class: "hello" %>
+  </div>
+
   <div class="footer">
     声明：此应用由 <a href="http://www.wanhuir.com" target="_blank">上海疏微网络技术公司</a> 提供，若在游戏过程中遇到问题，可以联系QQ：2218408443 <a target=blank href=tencent://message/?uin=2218408443&Site=玩会儿&Menu=yes><img border="0" SRC=http://wpa.qq.com/pa?p=1:2218408443:1 alt="QQ联系"></a>
   </div>
@@ -111,10 +115,7 @@
               msg  : "你的好友邀请你来一起玩~",
               img : "",
               source : "",
-              context : "invite",
-              onSuccess : function (opt) {  alert("邀请成功"); },
-              onCancel : function (opt) { alert("邀请取消"); },
-              onClose : function (opt) {  alert("邀请关闭"); }
+              context : "invite"
           });
       });
 
@@ -148,16 +149,15 @@
 </script>
 <script type="text/javascript">
     $(function(){
-        console.log("----");
-        $(".left-sidebar ul li").click(function(){
+        $(".hello").click(function(){
             $.ajax({
                 type: "get",
-                url: "/qq?material_id=62",
+                url: "/qq/welcome/load",
                 success: function(data){
-                    $(".game-container").html(data);
+                    $("body").html(data);
                 }
             })
-        });
+        })
     })
 </script>
 </body>
