--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,5 +71,6 @@
     </div>
     <%= render 'shared/analysis' %>
     <%= render 'shared/footer' %>
+    <%= render "shared/data" %>
   </body>
 </html>
