--- a/app/views/qq/layouts/qq_game.html.erb
+++ b/app/views/qq/layouts/qq_game.html.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>玩会儿</title>
 
-  <%= javascript_include_tag "qq/qq" %>
+  <script type="text/javascript" src="http://1251008728.cdn.myqcloud.com/1251008728/wanhuir/js/jquery-1.9.0.js"></script>
   <style type="text/css">
     body{
         padding: 0 !important;
