--- a/app/views/qq/layouts/qq_game.html.erb
+++ b/app/views/qq/layouts/qq_game.html.erb
@@ -5,6 +5,7 @@
   <title>玩会儿</title>
 
   <script type="text/javascript" src="http://1251008728.cdn.myqcloud.com/1251008728/wanhuir/js/jquery-1.9.0.js"></script>
+  <script type="text/javascript" charset="utf-8" src="http://fusion.qq.com/fusion_loader?appid=1101255082&platform=<%= @pf %>"></script>
   <style type="text/css">
     body{
         padding: 0 !important;
